--- a/PositionIn/Login/Login.storyboard
+++ b/PositionIn/Login/Login.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="JGW-l6-Shb">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Login View Controller-->
@@ -16,66 +17,111 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QF7-vR-jeG">
-                                <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BT1-Fz-1Vn">
+                                <rect key="frame" x="30" y="15" width="540" height="540"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="MenuLogo" translatesAutoresizingMaskIntoConstraints="NO" id="ZTE-fZ-TL1">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="100"/>
-                                    </imageView>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bpc-bC-u3L">
-                                        <rect key="frame" x="0.0" y="108" width="300" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SRk-Dj-WEV">
-                                        <rect key="frame" x="0.0" y="146" width="300" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VmY-gq-ys2">
-                                        <rect key="frame" x="0.0" y="193" width="300" height="30"/>
-                                        <color key="backgroundColor" red="1" green="0.73725490196078436" blue="0.31764705882352939" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                        <state key="normal" title="Login">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AiG-t9-3Te">
-                                        <rect key="frame" x="0.0" y="231" width="300" height="30"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                        <state key="normal" title="Register">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
-                                                <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderSize">
-                                                <integer key="value" value="1"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <segue destination="zd3-fl-Vea" kind="show" identifier="ShowRegister" id="UDN-Qv-XlL"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lee-WM-z9T">
-                                        <rect key="frame" x="0.0" y="269" width="300" height="30"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                                        <state key="normal" title="Forgot password">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <segue destination="cgn-EO-laz" kind="show" identifier="ShowRecoverPassword" id="rTj-wI-PR9"/>
-                                        </connections>
-                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QF7-vR-jeG">
+                                        <rect key="frame" x="0.0" y="0.0" width="540" height="303"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MenuLogo" translatesAutoresizingMaskIntoConstraints="NO" id="ZTE-fZ-TL1">
+                                                <rect key="frame" x="0.0" y="0.0" width="540" height="100"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="lMO-9J-mb2"/>
+                                                </constraints>
+                                            </imageView>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bpc-bC-u3L">
+                                                <rect key="frame" x="0.0" y="108" width="540" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SRk-Dj-WEV">
+                                                <rect key="frame" x="0.0" y="146" width="540" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VmY-gq-ys2">
+                                                <rect key="frame" x="0.0" y="193" width="540" height="32"/>
+                                                <color key="backgroundColor" red="1" green="0.73725490196078436" blue="0.31764705882352939" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                <state key="normal" title="Login">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AiG-t9-3Te">
+                                                <rect key="frame" x="0.0" y="233" width="540" height="32"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                <state key="normal" title="Register">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
+                                                        <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderSize">
+                                                        <integer key="value" value="1"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <segue destination="zd3-fl-Vea" kind="show" identifier="ShowRegister" id="UDN-Qv-XlL"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lee-WM-z9T">
+                                                <rect key="frame" x="0.0" y="273" width="540" height="29"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                <state key="normal" title="Forgot password">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="cgn-EO-laz" kind="show" identifier="ShowRecoverPassword" id="rTj-wI-PR9"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.97254901959999995" green="0.83921568629999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="Lee-WM-z9T" secondAttribute="bottom" constant="1" id="91l-DV-ZGk"/>
+                                            <constraint firstItem="ZTE-fZ-TL1" firstAttribute="top" secondItem="QF7-vR-jeG" secondAttribute="top" id="9qo-QJ-Vrd"/>
+                                            <constraint firstAttribute="trailing" secondItem="bpc-bC-u3L" secondAttribute="trailing" id="E31-Dv-eb7"/>
+                                            <constraint firstAttribute="trailing" secondItem="ZTE-fZ-TL1" secondAttribute="trailing" id="FIm-su-JK2"/>
+                                            <constraint firstItem="bpc-bC-u3L" firstAttribute="trailing" secondItem="SRk-Dj-WEV" secondAttribute="trailing" id="HkI-GA-f2t"/>
+                                            <constraint firstItem="bpc-bC-u3L" firstAttribute="leading" secondItem="SRk-Dj-WEV" secondAttribute="leading" id="Igc-6q-Xzm"/>
+                                            <constraint firstItem="Lee-WM-z9T" firstAttribute="leading" secondItem="AiG-t9-3Te" secondAttribute="leading" id="K3Q-FZ-z7J"/>
+                                            <constraint firstItem="Lee-WM-z9T" firstAttribute="top" secondItem="AiG-t9-3Te" secondAttribute="bottom" constant="8" id="QMt-7N-hKf"/>
+                                            <constraint firstItem="bpc-bC-u3L" firstAttribute="leading" secondItem="QF7-vR-jeG" secondAttribute="leading" id="SCU-gn-4Vl"/>
+                                            <constraint firstItem="bpc-bC-u3L" firstAttribute="top" secondItem="ZTE-fZ-TL1" secondAttribute="bottom" constant="8" id="U4E-8M-2Mv"/>
+                                            <constraint firstItem="ZTE-fZ-TL1" firstAttribute="leading" secondItem="QF7-vR-jeG" secondAttribute="leading" id="a5e-UT-S2c"/>
+                                            <constraint firstItem="Lee-WM-z9T" firstAttribute="trailing" secondItem="AiG-t9-3Te" secondAttribute="trailing" id="bTC-tp-9bc"/>
+                                            <constraint firstItem="VmY-gq-ys2" firstAttribute="trailing" secondItem="SRk-Dj-WEV" secondAttribute="trailing" id="d5b-Ym-29a"/>
+                                            <constraint firstItem="AiG-t9-3Te" firstAttribute="leading" secondItem="VmY-gq-ys2" secondAttribute="leading" id="dqK-82-inn"/>
+                                            <constraint firstItem="AiG-t9-3Te" firstAttribute="top" secondItem="VmY-gq-ys2" secondAttribute="bottom" constant="8" id="gHB-TN-iXg"/>
+                                            <constraint firstItem="VmY-gq-ys2" firstAttribute="leading" secondItem="SRk-Dj-WEV" secondAttribute="leading" id="gLv-wb-h8R"/>
+                                            <constraint firstItem="SRk-Dj-WEV" firstAttribute="top" secondItem="bpc-bC-u3L" secondAttribute="bottom" constant="8" id="h8M-Ge-iYt"/>
+                                            <constraint firstItem="AiG-t9-3Te" firstAttribute="trailing" secondItem="VmY-gq-ys2" secondAttribute="trailing" id="qkg-qk-YVh"/>
+                                            <constraint firstItem="VmY-gq-ys2" firstAttribute="top" secondItem="SRk-Dj-WEV" secondAttribute="bottom" constant="17" id="uXT-Ou-0oS"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.97254901959999995" green="0.83921568629999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            </view>
+                                <constraints>
+                                    <constraint firstItem="QF7-vR-jeG" firstAttribute="top" secondItem="BT1-Fz-1Vn" secondAttribute="top" id="1fc-Q0-eE7"/>
+                                    <constraint firstItem="QF7-vR-jeG" firstAttribute="leading" secondItem="BT1-Fz-1Vn" secondAttribute="leading" id="efK-Pb-Zzn"/>
+                                    <constraint firstAttribute="trailing" secondItem="QF7-vR-jeG" secondAttribute="trailing" id="fzc-FR-7Fw"/>
+                                    <constraint firstAttribute="bottom" secondItem="QF7-vR-jeG" secondAttribute="bottom" id="hgi-ff-bO4"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BT1-Fz-1Vn" firstAttribute="width" secondItem="6Jk-vT-iGf" secondAttribute="width" multiplier="0.9" id="3Cr-r2-2NV"/>
+                            <constraint firstItem="QF7-vR-jeG" firstAttribute="width" secondItem="6Jk-vT-iGf" secondAttribute="width" multiplier="0.9" id="GsU-yR-olQ"/>
+                            <constraint firstAttribute="centerX" secondItem="BT1-Fz-1Vn" secondAttribute="centerX" id="LmK-gj-X8e"/>
+                            <constraint firstItem="BT1-Fz-1Vn" firstAttribute="centerY" secondItem="6Jk-vT-iGf" secondAttribute="centerY" multiplier="0.95" id="M1x-DS-AJA"/>
+                            <constraint firstItem="BT1-Fz-1Vn" firstAttribute="height" secondItem="6Jk-vT-iGf" secondAttribute="height" multiplier="0.9" id="Uhh-fU-msa"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="BT1-Fz-1Vn" id="gSU-PC-wBM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z3I-kB-SGj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
