--- a/PositionIn/Login/Login.storyboard
+++ b/PositionIn/Login/Login.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BT1-Fz-1Vn">
-                                <rect key="frame" x="30" y="15" width="540" height="540"/>
+                                <rect key="frame" x="30" y="105" width="540" height="480"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QF7-vR-jeG">
                                         <rect key="frame" x="0.0" y="0.0" width="540" height="303"/>
@@ -128,8 +128,8 @@
                             <constraint firstItem="QF7-vR-jeG" firstAttribute="width" secondItem="6Jk-vT-iGf" secondAttribute="width" multiplier="0.9" id="GsU-yR-olQ"/>
                             <constraint firstItem="EQN-pb-rUZ" firstAttribute="top" secondItem="cEq-LH-m4U" secondAttribute="bottom" constant="10" id="LPF-Qp-Rj7"/>
                             <constraint firstAttribute="centerX" secondItem="BT1-Fz-1Vn" secondAttribute="centerX" id="LmK-gj-X8e"/>
-                            <constraint firstItem="BT1-Fz-1Vn" firstAttribute="centerY" secondItem="6Jk-vT-iGf" secondAttribute="centerY" multiplier="0.95" id="M1x-DS-AJA"/>
-                            <constraint firstItem="BT1-Fz-1Vn" firstAttribute="height" secondItem="6Jk-vT-iGf" secondAttribute="height" multiplier="0.9" id="Uhh-fU-msa"/>
+                            <constraint firstItem="BT1-Fz-1Vn" firstAttribute="centerY" secondItem="6Jk-vT-iGf" secondAttribute="centerY" multiplier="1.15" id="M1x-DS-AJA"/>
+                            <constraint firstItem="BT1-Fz-1Vn" firstAttribute="height" secondItem="6Jk-vT-iGf" secondAttribute="height" multiplier="0.8" id="Uhh-fU-msa"/>
                             <constraint firstAttribute="trailing" secondItem="EQN-pb-rUZ" secondAttribute="trailing" constant="10" id="oAJ-NN-zo6"/>
                         </constraints>
                     </view>
@@ -154,53 +154,65 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4lp-Tq-1E7">
-                                <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yvy-Oo-AWn">
+                                <rect key="frame" x="-20" y="-20" width="340" height="340"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="MenuLogo" translatesAutoresizingMaskIntoConstraints="NO" id="TF3-3p-AtJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="100"/>
-                                    </imageView>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BIi-2m-7M6">
-                                        <rect key="frame" x="0.0" y="108" width="300" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QzI-s4-fzm">
-                                        <rect key="frame" x="0.0" y="180" width="300" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IYm-6L-hgy">
-                                        <rect key="frame" x="0.0" y="218" width="300" height="30"/>
-                                        <color key="backgroundColor" red="1" green="0.73725490199999999" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                        <state key="normal" title="Sign up">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                    </button>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nRy-1a-hX9">
-                                        <rect key="frame" x="0.0" y="146" width="300" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iIE-Fe-9Ta">
-                                        <rect key="frame" x="0.0" y="256" width="300" height="30"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                                        <state key="normal" title="Back">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <segue destination="YNj-0n-qLd" kind="unwind" unwindAction="prepareForUnwind:" id="moP-Qf-9tv"/>
-                                        </connections>
-                                    </button>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4lp-Tq-1E7">
+                                        <rect key="frame" x="20" y="20" width="300" height="300"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="MenuLogo" translatesAutoresizingMaskIntoConstraints="NO" id="TF3-3p-AtJ">
+                                                <rect key="frame" x="0.0" y="0.0" width="300" height="100"/>
+                                            </imageView>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BIi-2m-7M6">
+                                                <rect key="frame" x="0.0" y="108" width="300" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QzI-s4-fzm">
+                                                <rect key="frame" x="0.0" y="180" width="300" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IYm-6L-hgy">
+                                                <rect key="frame" x="0.0" y="218" width="300" height="30"/>
+                                                <color key="backgroundColor" red="1" green="0.73725490199999999" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                <state key="normal" title="Sign up">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="didTapSignupButton:" destination="zd3-fl-Vea" eventType="touchUpInside" id="6dU-qa-XYI"/>
+                                                </connections>
+                                            </button>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nRy-1a-hX9">
+                                                <rect key="frame" x="0.0" y="146" width="300" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iIE-Fe-9Ta">
+                                                <rect key="frame" x="0.0" y="256" width="300" height="30"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                <state key="normal" title="Back">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="YNj-0n-qLd" kind="unwind" unwindAction="prepareForUnwind:" id="moP-Qf-9tv"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.97254901959999995" green="0.83921568629999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.97254901959999995" green="0.83921568629999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            </view>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="r6h-lC-HMG"/>
+                    <connections>
+                        <outlet property="scrollView" destination="yvy-Oo-AWn" id="rFh-k9-MSt"/>
+                        <outlet property="signupButton" destination="IYm-6L-hgy" id="Lta-86-0jH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MJB-Ax-fPF" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="YNj-0n-qLd" userLabel="Exit" sceneMemberID="exit"/>
